--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,6 +1,5 @@
 plugins {
 	id "com.github.johnrengelman.shadow" version "7.1.2"
-	id "com.modrinth.minotaur" version "2.+"
 }
 architectury {
 	platformSetupLoomIde()
@@ -17,9 +16,10 @@ configurations {
 	developmentFabric.extendsFrom common
 }
 dependencies {
+	minecraft "com.mojang:minecraft:${minecraft_version}"
+	mappings loom.officialMojangMappings()
 	modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
-	modApi "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
-
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
 	common(project(path: ":common", configuration: "namedElements")) {
 		transitive false
 	}
@@ -28,19 +28,21 @@ dependencies {
 	}
 
 	// Architectury-api
-	modApi "dev.architectury:architectury-fabric:${architectury_version}"
+	modImplementation "dev.architectury:architectury-fabric:${architectury_version}"
 	// MixinExtras
 	include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:${fabric_mixin_extras_version}")))
 	// Cloth Config API
-	modApi("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_api_version}") {
+	modImplementation("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_api_version}") {
 		exclude(group: "net.fabricmc.fabric-api")
 		exclude module: 'modmenu'
 	}
 	// YACL
 	modImplementation "dev.isxander:yet-another-config-lib:${yacl_mc_version}-fabric"
-
 	// ModMenu
 	modImplementation("com.terraformersmc:modmenu:${modmenu_version}")
+
+
+
 }
 shadowJar {
 	exclude "architectury.common.json"
@@ -60,7 +62,7 @@ sourcesJar {
 	}
 }
 base {
-	archivesName = rootProject.archiveFileNameOfPlatform("fabric")
+	archivesName = rootProject.archiveFileNameOfLoader("fabric")
 	version = ""
 }
 components.java {
@@ -71,25 +73,4 @@ components.java {
 publishing {
 	publications {}
 	repositories {}
-}
-
-
-// https://github.com/modrinth/minotaur/blob/a151c425fb128cd5384242f25b6fbb0a1d18e325/README.md
-modrinth {
-	debugMode = Boolean.parseBoolean(publish_debug_mode)
-	token = System.getenv("MODRINTH_TOKEN")
-	projectId = modrinth_project_id
-	versionNumber = mod_version
-	versionType = mod_version_type
-	versionName = "${mod_version}-mc${minecraft_version}-fabric"
-	changelog = readChangeLog()
-	uploadFile = remapJar
-	autoAddDependsOn = false
-	dependencies {
-		required.project "fabric-api"
-		required.project "architectury-api"
-		optional.project "modmenu"
-		optional.project "cloth-config"
-		optional.project "yacl"
-	}
 }
