--- a/gradle.properties
+++ b/gradle.properties
@@ -18,12 +18,12 @@ mod_url_home                = https://leawind.github.io/Third-Person/en-US/?auto
 mod_url_issue               = https://github.com/LEAWIND/Third-Person/issue
 mod_url_src                 = https://github.com/LEAWIND/Third-Person
 ############################
-# Common
+# Assume it only support one minecraft version
 minecraft_version           = 1.20.1
 #https://minecraft.wiki/w/Pack_format
 resource_pack_format        = 15
 #https://modrinth.com/mod/architectury-api/versions
-enabled_platforms           = fabric,forge
+enabled_loaders             = fabric,forge
 architectury_version        = 9.2.14
 #https://fabricmc.net/develop/
 yarn_mappings               = 1.20.1+build.10
@@ -46,5 +46,7 @@ yacl_mc_version             = 3.5.0+1.20.1
 yacl_version                = 3.5.0
 ############################
 # Publishing
-modrinth_project_id         = leawind-third-person
+changelog_file              = changelog.md
+curseforge_project_id       = 930880
+modrinth_project_id         = S3D3QF0M
 publish_debug_mode          = true
