--- a/gradle.properties
+++ b/gradle.properties
@@ -5,9 +5,8 @@ java_version                = 17
 ############################
 # Basic
 mod_id                      = leawind_third_person
-mod_version                 = 2.0.9
-#  release | beta | alpha
-mod_version_type            = release
+mod_version                 = 2.1.0-beta.1
+mod_version_type            = beta
 mod_group_id                = net.leawind.mc.thirdperson
 mod_name                    = Leawind's Third Person
 mod_description             = A practical, smooth, feature-rich third-person mod.
