--- a/common/build.gradle
+++ b/common/build.gradle
@@ -13,7 +13,7 @@ dependencies {
 	modApi "dev.architectury:architectury:${architectury_version}"
 	// Cloth config
 	modApi("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_api_version}") {
-		exclude(group: "net.fabricmc.fabric-api")
+		exclude group: "net.fabricmc.fabric-api"
 		exclude module: 'modmenu'
 	}
 	// YACL
