--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -30,19 +30,16 @@ dependencies {
 	// Architectury-api
 	modImplementation "dev.architectury:architectury-fabric:${architectury_version}"
 	// MixinExtras
-	include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:${fabric_mixin_extras_version}")))
+	include implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:${fabric_mixin_extras_version}"))
 	// Cloth Config API
 	modImplementation("me.shedaniel.cloth:cloth-config-fabric:${cloth_config_api_version}") {
-		exclude(group: "net.fabricmc.fabric-api")
+		exclude group: "net.fabricmc.fabric-api"
 		exclude module: 'modmenu'
 	}
 	// YACL
 	modImplementation "dev.isxander:yet-another-config-lib:${yacl_mc_version}-fabric"
 	// ModMenu
-	modImplementation("com.terraformersmc:modmenu:${modmenu_version}")
-
-
-
+	modImplementation "com.terraformersmc:modmenu:${modmenu_version}"
 }
 shadowJar {
 	exclude "architectury.common.json"
