--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@
 *.gradle         text eol=lf
 *.properties     text eol=lf
 *.json           text eol=lf
+*.mcmeta         text eol=lf
 *.yaml           text eol=lf
 *.toml           text eol=lf
 *.md             text eol=lf
