--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -54,7 +54,7 @@ remapJar {
 	dependsOn shadowJar
 }
 sourcesJar {
-	def commonSources = project(":common").sourcesJar
+	Task commonSources = project(":common").sourcesJar
 	dependsOn commonSources
 	from commonSources.archiveFile.map {
 		zipTree(it)
