chore: update version declaration

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml"
-loaderVersion = "[47,)"
+loaderVersion = "*"
 license = "${mod_license}"
 showAsResourcePack = false
 issueTrackerURL = "${mod_url_issue}"
@@ -16,7 +16,7 @@ displayURL = "${mod_url_home}"
 [[dependencies.leawind_third_person]]
 modId = "forge"
 mandatory = true
-versionRange = "[47,)"
+versionRange = "*"
 ordering = "NONE"
 side = "CLIENT"
 referraUrl = "https://files.minecraftforge.net/"
@@ -24,7 +24,7 @@ referraUrl = "https://files.minecraftforge.net/"
 [[dependencies.leawind_third_person]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[${minecraft_version},)"
+versionRange = "[${minecraft_version_min},${minecraft_version_max}]"
 ordering = "NONE"
 side = "CLIENT"
 referraUrl = "https://www.minecraft.net/"
@@ -32,7 +32,7 @@ referraUrl = "https://www.minecraft.net/"
 [[dependencies.leawind_third_person]]
 modId = "architectury"
 mandatory = true
-versionRange = "(,${architectury_version}]"
+versionRange = "(,${architectury_version_max}]"
 ordering = "AFTER"
 side = "CLIENT"
 referraUrl = "https://modrinth.com/mod/architectury-api"
