--- a/gradle.properties
+++ b/gradle.properties
@@ -17,13 +17,15 @@ mod_url_home                = https://leawind.github.io/Third-Person/en-US/?auto
 mod_url_issue               = https://github.com/LEAWIND/Third-Person/issue
 mod_url_src                 = https://github.com/LEAWIND/Third-Person
 ############################
-# Assume it only support one minecraft version
 minecraft_version           = 1.20.1
+minecraft_version_min       = 1.20
+minecraft_version_max       = 1.20.1
 #https://minecraft.wiki/w/Pack_format
 resource_pack_format        = 15
 #https://modrinth.com/mod/architectury-api/versions
 enabled_loaders             = fabric,forge
 architectury_version        = 9.2.14
+architectury_version_max    = 9.2.14
 #https://fabricmc.net/develop/
 yarn_mappings               = 1.20.1+build.10
 fabric_loader_version       = 0.15.11
