--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ java_version                = 17
 ############################
 # Basic
 mod_id                      = leawind_third_person
-mod_version                 = 2.1.0
-mod_version_type            = release
+mod_version                 = 2.2.0-beta.1
+mod_version_type            = beta
 mod_group_id                = net.leawind.mc.thirdperson
 mod_name                    = Leawind's Third Person
 mod_description             = A practical, smooth, feature-rich third-person mod.
@@ -20,6 +20,8 @@ mod_url_src                 = https://github.com/LEAWIND/Third-Person
 minecraft_version           = 1.20.1
 minecraft_version_min       = 1.20
 minecraft_version_max       = 1.20.1
+# splited by /[^\d.]+/
+minecraft_version_list      = 1.20, 1.20.1
 #https://minecraft.wiki/w/Pack_format
 resource_pack_format        = 15
 #https://modrinth.com/mod/architectury-api/versions
