--- a/.editorconfig
+++ b/.editorconfig
@@ -77,7 +77,7 @@ ij_java_case_statement_on_separate_line                         = true
 ij_java_catch_on_new_line                                       = false
 ij_java_class_annotation_wrap                                   = split_into_lines
 ij_java_class_brace_style                                       = end_of_line
-ij_java_class_count_to_use_import_on_demand                     = 5
+ij_java_class_count_to_use_import_on_demand                     = 2147483647
 ij_java_class_names_in_javadoc                                  = 1
 ij_java_deconstruction_list_wrap                                = normal
 ij_java_do_not_indent_top_level_class_members                   = false
@@ -148,7 +148,7 @@ ij_java_method_parameters_right_paren_on_new_line               = false
 ij_java_method_parameters_wrap                                  = on_every_item
 ij_java_modifier_list_wrap                                      = false
 ij_java_multi_catch_types_wrap                                  = on_every_item
-ij_java_names_count_to_use_import_on_demand                     = 3
+ij_java_names_count_to_use_import_on_demand                     = 2147483647
 ij_java_new_line_after_lparen_in_annotation                     = false
 ij_java_new_line_after_lparen_in_deconstruction_pattern         = true
 ij_java_new_line_after_lparen_in_record_header                  = false
@@ -348,7 +348,7 @@ ij_groovy_call_parameters_wrap                             = on_every_item
 ij_groovy_catch_on_new_line                                = false
 ij_groovy_class_annotation_wrap                            = split_into_lines
 ij_groovy_class_brace_style                                = end_of_line
-ij_groovy_class_count_to_use_import_on_demand              = 5
+ij_groovy_class_count_to_use_import_on_demand              = 2147483647
 ij_groovy_do_while_brace_force                             = never
 ij_groovy_else_on_new_line                                 = false
 ij_groovy_enable_groovydoc_formatting                      = true
@@ -399,7 +399,7 @@ ij_groovy_method_parameters_new_line_after_left_paren      = false
 ij_groovy_method_parameters_right_paren_on_new_line        = true
 ij_groovy_method_parameters_wrap                           = on_every_item
 ij_groovy_modifier_list_wrap                               = false
-ij_groovy_names_count_to_use_import_on_demand              = 3
+ij_groovy_names_count_to_use_import_on_demand              = 2147483647
 ij_groovy_packages_to_use_import_on_demand                 = java.awt.*, javax.swing.*
 ij_groovy_parameter_annotation_wrap                        = off
 ij_groovy_parentheses_expression_new_line_after_left_paren = false
