--- a/gradle.properties
+++ b/gradle.properties
@@ -36,6 +36,9 @@ fabric_api_version          = 0.92.2+1.20.1
 forge_version               = 1.20.1-47.3.0
 ############################
 # Dependencies
+# https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
+# https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
+junit_jupiter_version       = 5.11.2
 #MixinExtras
 fabric_mixin_extras_version = 0.3.5
 forge_mixin_extras_version  = 0.3.5
