style: reformat gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ org.gradle.jvmargs          = -Xmx8G
 org.gradle.parallel         = true
 org.gradle.daemon           = true
 java_version                = 17
-############################
-# Basic
+
+# Mod meta data
 mod_id                      = leawind_third_person
 mod_version                 = 2.2.0-beta.1
 mod_version_type            = beta
@@ -16,42 +16,54 @@ mod_authors                 = Leawind
 mod_url_home                = https://leawind.github.io/Third-Person/en-US/?autolang
 mod_url_issue               = https://github.com/LEAWIND/Third-Person/issue
 mod_url_src                 = https://github.com/LEAWIND/Third-Person
-############################
+
+# Minecraft version
 minecraft_version           = 1.20.1
 minecraft_version_min       = 1.20
 minecraft_version_max       = 1.20.1
-# splited by /[^\d.]+/
+#splited by /[^\d.]+/
 minecraft_version_list      = 1.20, 1.20.1
+
+enabled_loaders             = fabric,forge
+
 #https://minecraft.wiki/w/Pack_format
 resource_pack_format        = 15
+
 #https://modrinth.com/mod/architectury-api/versions
-enabled_loaders             = fabric,forge
 architectury_version        = 9.2.14
 architectury_version_max    = 9.2.14
+
 #https://fabricmc.net/develop/
 yarn_mappings               = 1.20.1+build.10
 fabric_loader_version       = 0.15.11
 fabric_api_version          = 0.92.2+1.20.1
+
 #https://files.minecraftforge.net/net/minecraftforge/forge/
 forge_version               = 1.20.1-47.3.0
-############################
+
 # Dependencies
-# https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
-# https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
+
+#https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
+#https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
 junit_jupiter_version       = 5.11.2
+
 #MixinExtras
 fabric_mixin_extras_version = 0.3.5
 forge_mixin_extras_version  = 0.3.5
+
 #https://github.com/TerraformersMC/ModMenu/releases
 #https://modrinth.com/mod/modmenu/versions
 modmenu_version             = 7.2.2
+
 #https://modrinth.com/mod/cloth-config/versions
 cloth_config_api_version    = 11.1.118
+
 #https://modrinth.com/mod/yacl/versions
 yacl_mc_version             = 3.5.0+1.20.1
 yacl_version                = 3.5.0
-############################
+
 # Publishing
+
 changelog_file              = changelog.md
 curseforge_project_id       = 930880
 modrinth_project_id         = S3D3QF0M
