--- a/.editorconfig
+++ b/.editorconfig
@@ -272,7 +272,7 @@ max_line_length = 1048576
 
 [*.properties]
 ij_properties_align_group_field_declarations    = true
-ij_properties_keep_blank_lines                  = false
+ij_properties_keep_blank_lines                  = true
 ij_properties_key_value_delimiter               = equals
 ij_properties_spaces_around_key_value_delimiter = true
 
